--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.9.0",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^1.41.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.10.5",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "19.1.2",
     "eslint": "^9",
